--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.23.0",
     "@radix-ui/react-dialog": "^1.0.7",
-    "@radix-ui/react-avatar": "^1.0.6"
+    "@radix-ui/react-avatar": "^1.0.6",
+    "lucide-react": "^0.352.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1",
